# ubuntu_cli

./: .gitignore  README.md  pyproject.toml
modules/: sys_paths.py  update_sw.py
modules/os_utils/: sw_update.py
modules/timer/: base.py  run_timer.py
scripts/: os_sw_update.py  timer.py  update_sw.py
ubuntu_cli/modules/: start_entry_point.py  sys_paths.py  terminal.py
ubuntu_cli/modules/os_utils/: sw_update.py
ubuntu_cli/modules/timer/: run_timer.py
ubuntu_cli/scripts/: os_sw_update.py  start_ubuntu_cli.py  timer.py
